--- a/OpenGL ES2/es2RenderToTexture/res/values/strings.xml
+++ b/OpenGL ES2/es2RenderToTexture/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">es2RenderToTexture</string>
+    <string name="app_name">RenderToTexture</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
